--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,12 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="collapse navbar-collapse" id="navbarText">
+    <div class="collapse navbar-collapse container" id="navbarText">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" routerLink="">Product List <span class="sr-only">(current)</span></a
-        >
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/cart">Cart</a>
+                <a class="nav-link" routerLink="">Product List</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/cart">Cart</a>
             </li>
         </ul>
     </div>
