--- a/src/app/components/product/product.component.css
+++ b/src/app/components/product/product.component.css
@@ -1,9 +1,7 @@
 .product-image {
     list-style-type: none;
-    width: 290px;
     padding: 20px;
-    margin: 6px 6px;
-    border: 1px solid #33B5E5;
+    max-width: 100%;
 }
 
 .product-container {
