--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,31 +1,51 @@
 <h1 class="mt-5">Cart</h1>
 
-<div class="empty-cart-message" *ngIf="cart.products.length === 0; else elseBlock">
-    no items in cart
+<div
+  class="empty-cart-message row"
+  *ngIf="cart.products.length === 0; else elseBlock"
+>
+  <div
+    class="alert alert-warning col-12"
+    *ngIf="cart.products.length === 0; else elseBlock"
+  >
+    Your cart is currently empty.
+  </div>
+
+  <a class="btn btn-primary w-auto" routerLink="/" routerLinkActive="active">
+    Back to product list
+  </a>
 </div>
 
 <ng-template #elseBlock>
-    <div class="cart">
-        <div class="cart-items">
-            <div class="cart-item" *ngFor="let product of cart.products">
-                <img src="{{ product.url }}" alt="" />
-                <div class="cart-item-details">
-                    <h5>{{ product.name }}</h5>
-                    € {{ product.total.toFixed(2) }}
+  <div class="cart">
+    <div class="cart-items">
+      <div class="cart-item" *ngFor="let product of cart.products">
+        <img src="{{ product.url }}" alt="" />
+        <div class="cart-item-details">
+          <h5>{{ product.name }}</h5>
+          € {{ product.total.toFixed(2) }}
 
-                    <button class="btn btn-secondary" (click)="removeProduct(product.id)">
+          <button class="btn btn-secondary" (click)="removeProduct(product.id)">
             Remove
           </button>
 
-                    <div class="form-group">
-                        <label for="cart-{{ product.name }}">Amount</label>
-                        <input type="number" class="form-control" min="1" id="cart-{{ product.name }}" [(ngModel)]="product.amount" ngModel (ngModelChange)="changeAmount(product.id, $event)" />
-                    </div>
-                </div>
-            </div>
+          <div class="form-group">
+            <label for="cart-{{ product.name }}">Amount</label>
+            <input
+              type="number"
+              class="form-control"
+              min="1"
+              id="cart-{{ product.name }}"
+              [(ngModel)]="product.amount"
+              ngModel
+              (ngModelChange)="changeAmount(product.id, $event)"
+            />
+          </div>
         </div>
-
-        <app-payment (submitOrder)="createOrder($event)"></app-payment>
+      </div>
     </div>
-    <h1 class="text-center">Total: € {{ cart.total.toFixed(2) }}</h1>
+
+    <app-payment (submitOrder)="createOrder($event)"></app-payment>
+  </div>
+  <h1 class="text-center">Total: € {{ cart.total.toFixed(2) }}</h1>
 </ng-template>
